# aws-lambda-module-loader

./: LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yml
src/aws_lambda_module_loader/: __init__.py
tests/: test_loader.py
