[tool.poetry]
name = "aws-lambda-module-loader"
version = "0.1.0"
description = ""
authors = ["Bjoern Boschman <bjoern.boschman@tvsquared.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"